(items-list) Move empty-list-message to index page and fix infinite scroll

--- a/client/src/elements/organisms/items-list.html
+++ b/client/src/elements/organisms/items-list.html
@@ -1,17 +1,10 @@
 <template bindable="items">
   <require from="./items-list.css"></require>
   <require from="../molecules/item-list-entry.js"></require>
-  <require from="./items-list.css"></require>
-  <div show.bind="items.length > 0">
-    <div class="items-list__header q-text-small">
-      <span>${'itemsList.title' & t}</span>
-      <span>${'itemsList.author' & t}</span>
-      <span>${'itemsList.updated' & t}</span>
-    </div>
-    <item-list-entry repeat.for="item of items" item.bind="item"></item-list-entry>
-    <q-loader if.bind="itemsLoading"></q-loader>
+  <div show.bind="items.length > 0" class="items-list__header q-text-small">
+    <span>${'itemsList.title' & t}</span>
+    <span>${'itemsList.author' & t}</span>
+    <span>${'itemsList.updated' & t}</span>
   </div>
-  <div class="items-list--empty" show.bind="items.length === 0">
-    <h4>${'itemsList.empty' & t}</h4>
-  </div>
+  <item-list-entry show.bind="items.length > 0" repeat.for="item of items" item.bind="item"></item-list-entry>
 </template>
