(index) use a sentinel element for infinite scrolling

--- a/client/src/pages/index.html
+++ b/client/src/pages/index.html
@@ -25,6 +25,7 @@
     <items-filter filters.bind="availableFilters" change.call="filterChanged()"></items-filter>
 
     <items-list items.bind="items" ref="itemsListElement"></items-list>
+    <div class="infitite-scrolling-sentinel" ref="infiniteScrollingSentinel"></div>
     <div class="index__empty-list-message" if.bind="items.length === 0">
       <h4>${'itemsList.empty' & t}</h4>
     </div>
