--- a/client/src/elements/molecules/notification.html
+++ b/client/src/elements/molecules/notification.html
@@ -7,8 +7,8 @@
       </span>
     </div>
     <div class="notification__content">
-      <h5 class="notification__title">${notification.message.title & t: notification.message.parameters}</h5>
-      <h6 class="notification__body">${notification.message.body & t: notification.message.parameters}</h6>
+      <h5 class="notification__title" innerhtml.bind="notification.message.title & t: notification.message.parameters"></h5>
+      <h6 class="notification__body" innerhtml.bind="notification.message.body & t: notification.message.parameters"></h6>
     </div>
   </div>
 </template>
