--- a/client/src/elements/item-preview/preview-container.html
+++ b/client/src/elements/item-preview/preview-container.html
@@ -37,7 +37,7 @@
     }
   </style>
   <div class="preview-element-container">
-    <div class="preview-element" css="width: ${width}px; color: ${previewColor}; background-color: ${previewColor};">
+    <div class="preview-element" css="width: calc(${width}px + (2 * var(--q-preview-padding))); color: ${previewColor}; background-color: ${previewColor};">
       <div ref="previewElement" css="overflow: hidden; ${loadingStatus === 'loading' ? 'opacity: 0' : 'opacity: 1'};"></div>
       <div class="preview-element__error-box" show.bind="error">
         <h4 class="preview-element__error-text">${'preview.generalError.title' & t} ${'preview.generalError.body' & t}</h4>
