--- a/client/src/elements/schema-editor/schema-editor-string.html
+++ b/client/src/elements/schema-editor/schema-editor-string.html
@@ -1,10 +1,10 @@
 <template class="schema-editor-input">
   <label>
-    ${schema["title"]}
+    ${schema["title"] & toolT}
     <span show.bind="required">
       <span>- </span>
       <span style="color: var(--q-color-error)">${'editor.required' & t}</span>
     </span>
-    <input type="text" placeholder.to-view="options.placeholder || ''" value.bind="data" required.bind="required" keyup.delegate="change() & debounce:800">
+    <input type="text" placeholder.to-view="options.placeholder || '' & toolT" value.bind="data" required.bind="required" keyup.delegate="change() & debounce:800">
   </label>
 </template>
