--- a/client/src/elements/schema-editor/schema-editor-base64image.html
+++ b/client/src/elements/schema-editor/schema-editor-base64image.html
@@ -1,7 +1,7 @@
 <template>
   <require from="./schema-editor-base64image.css"></require>
   <label>
-    <span>${schema["title"]}</span>
+    <span>${schema["title"] & toolT}</span>
     <span show.bind="required">
       <span>- </span>
       <span style="color: var(--q-color-error)">${'editor.required' & t}</span>
