--- a/client/index.html
+++ b/client/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="/favicon.png">
     <base href="/">
+    <!-- HEAD_MARKUP -->
   </head>
   <body aurelia-app="main">
+    <!-- BODY_START_MARKUP -->
     <div style="position: absolute; top: calc(50% - 20vh); left: calc(50% - 15vh); width: 30vh; width: 30vh;">
       <svg viewBox="0 0 172 172">
         <path d="M63.9,22.7l7.7-2.2c0,0,34.3-9.8,55.6,18.3c20.9,27.6,17,73.4-3.6,91.4c1.5,2.4,6,13,17.9,12.4c-10.8,4.7-21.4,4.3-28.2-9.4c0,0,20.3-15.7,17-53.5c-2.8-31.7-18.3-48.2-36.9-54.8C78.8,20.2,67.8,22.2,63.9,22.7z M130.4,161.4l10.2-3c9.1-3.5,15.4-14,19.2-23.4l-10.2,3C147.4,144.1,140.1,158.1,130.4,161.4z M48.7,70.1c-1.1,20.4,1.6,35.7,5.6,43.8l1.3,1.2c0,0,6.5-9,6-12.2c-3.1-11.9-4-29.2-1.5-43.5c2.4-13.6,9.2-24,15.7-27.1C61.3,33,49.9,48.1,48.7,70.1z M70.8,97.3c1.1-0.2,5.5-0.9,11.1,0.5c8.9,2.3,16.5,10.7,22.5,21c2.6-1.8,4.9-10.7,3.5-12.6c-1.4-1.9-5.9-8-13.6-10.8c-7.8-2.8-14.1-1-14.1-1L70.8,97.3z M81.1,131.6c6,0.6,11.5-1.1,13.7-2.8c-1.9,0.2-6.6-0.1-12.1-1.7c-5.2-1.5-9.2-4.6-11.1-6.6c0.3-8.3,4.6-11.7,6.3-12.4c-2.2,0.1-8.3,0.2-12.6,4.6c-4,4.1-3.9,10.9-3.9,10.9C67.6,129.6,73.9,131,81.1,131.6z"/>
@@ -24,5 +26,6 @@
         document.getElementById('q-load-error-message').insertAdjacentHTML('beforeend', 'This is taking way too long, are you using the latest version of Chrome?')
       }, 3000)
     </script>
+    <!-- BODY_END_MARKUP -->
   </body>
 </html>
