remove schema-editor-wrapper string input special max-height handling

--- a/client/src/elements/schema-editor/schema-editor-wrapper.html
+++ b/client/src/elements/schema-editor/schema-editor-wrapper.html
@@ -1,4 +1,4 @@
-<template class="${getType(schema) === 'string' ? 'schema-editor-wrapper--input' : ''}">
+<template>
   <require from="./schema-editor-wrapper.css"></require>
   <div if.bind="getType(schema) === 'object'" class="schema-editor-block">
     <require from="./schema-editor-object"></require>
