(schema-editor-table) implement metaData editor for cells

--- a/client/src/elements/schema-editor/schema-editor-object.html
+++ b/client/src/elements/schema-editor/schema-editor-object.html
@@ -1,4 +1,4 @@
-<template>
+<template style="display: block">
     <require from="./schema-editor-wrapper"></require>
     <legend if.bind="!noObjectTitle">
       ${schema.title & toolT}
