--- a/client/src/elements/schema-editor/schema-editor-table.html
+++ b/client/src/elements/schema-editor/schema-editor-table.html
@@ -1,5 +1,6 @@
 <template>
   <require from="./schema-editor-table.css"></require>
+  <require from="elements/schema-editor/schema-editor"></require>
   <label>
     ${schema["title"] & toolT}
     <span show.bind="required">
@@ -8,5 +9,12 @@
     </span>
     <div ref="tableContainerElement"></div>
   </label>
+  <div class="schema-editor-table__meta-editor schema-editor-table__meta-editor--hidden" ref="metaEditorWrapper" if.bind="metaDataEditorEnabled">
+    <div ref="metaEditorGuidingLine" class="schema-editor-table__meta-editor__guiding-line"></div>
+    <label>Metadaten <span if.bind="data.table[selectedRow][selectedColumn] && data.table[selectedRow][selectedColumn] !== ''">für ${data.table[selectedRow][selectedColumn]}</span></label>
+    <schema-editor if.bind="selectedRow !== undefined && selectedColumn !== undefined" schema.bind="metaEditorSchema" data.bind="metaEditorData.cells[selectedRow][selectedColumn]" change.call="handleMetaEditorChange()"
+      show-notifications.bind="false">
+    </schema-editor>
+  </div>
   <button-secondary if.bind="options.allowTranspose" click.delegate="transpose()" style="width: 250px;">${ 'editor.transpose' & t }</button-secondary>
 </template>
