--- a/client/src/elements/schema-editor/schema-editor-table.html
+++ b/client/src/elements/schema-editor/schema-editor-table.html
@@ -11,7 +11,7 @@
   </label>
   <div class="schema-editor-table__meta-editor schema-editor-table__meta-editor--hidden" ref="metaEditorWrapper" if.bind="metaDataEditorEnabled && metaDataEditorAvailable">
     <div ref="metaEditorGuidingLine" class="schema-editor-table__meta-editor__guiding-line"></div>
-    <label>Metadaten <span if.bind="data.table[selectedRow][selectedColumn] && data.table[selectedRow][selectedColumn] !== ''">für ${data.table[selectedRow][selectedColumn]}</span></label>
+    <label>Metadaten <span if.bind="data.table[selectedRow][selectedColumn] && data.table[selectedRow][selectedColumn] !== ''">für</span> <span class="schema-editor-table__meta-editor__title--highlight" if.bind="data.table[selectedRow][selectedColumn] && data.table[selectedRow][selectedColumn] !== ''">${data.table[selectedRow][selectedColumn]}</span></label>
     <schema-editor if.bind="selectedRow !== undefined && selectedColumn !== undefined" schema.bind="metaEditorSchema" data.bind="metaEditorData.cells[selectedRow][selectedColumn]" change.call="handleMetaEditorChange()"
       show-notifications.bind="false">
     </schema-editor>
