(schema-editor-table) metadata editor: fix flag for cells with metadata

--- a/client/src/elements/schema-editor/schema-editor-table.html
+++ b/client/src/elements/schema-editor/schema-editor-table.html
@@ -7,7 +7,7 @@
       <span>- </span>
       <span style="color: var(--q-color-error)">${'editor.required' & t}</span>
     </span>
-    <div ref="tableContainerElement" class="{{ metaDataEditorAvailable ? 'metadata-editor-available' : ''"></div>
+    <div ref="tableContainerElement" class="${ metaDataEditorAvailable ? 'metadata-editor-available' : ''}"></div>
   </label>
   <div class="schema-editor-table__meta-editor schema-editor-table__meta-editor--hidden" ref="metaEditorWrapper" if.bind="metaDataEditorEnabled && metaDataEditorAvailable">
     <div ref="metaEditorGuidingLine" class="schema-editor-table__meta-editor__guiding-line"></div>
