Fix open in Q link

--- a/client/src/livingdocs-component-app/app.html
+++ b/client/src/livingdocs-component-app/app.html
@@ -80,7 +80,7 @@
         </div>
         <div class="livingdocs-component-item-controls">
           <div class="item-edit">
-            <a href="#/editor/${tool}/${selectedItem.id}" target="_blank">
+            <a href="#/editor/${selectedItem.conf.tool}/${selectedItem.id}" target="_blank">
               <button-secondary icon="edit">${'livingdocsComponent.edit' & t}</button-secondary>
             </a>
           </div>
