--- a/client/src/elements/schema-editor/schema-editor-files.html
+++ b/client/src/elements/schema-editor/schema-editor-files.html
@@ -1,4 +1,4 @@
-<template class="schema-editor-input">
+<template class="schema-editor-input schema-editor-notification-column">
   <require from="./schema-editor-files.css"></require>
   <div >
     <div class="dropzone" ref="dropzoneElement"></div>
