--- a/client/src/elements/schema-editor/schema-editor-color.html
+++ b/client/src/elements/schema-editor/schema-editor-color.html
@@ -1,4 +1,4 @@
-<template class="schema-editor-input">
+<template class="schema-editor-input schema-editor-notification-column">
   <require from="./schema-editor-color.css"></require>
   <label>
     ${schema["title"] & toolT}
