--- a/client/src/elements/schema-editor/schema-editor-date.html
+++ b/client/src/elements/schema-editor/schema-editor-date.html
@@ -1,4 +1,4 @@
-<template class="schema-editor-input">
+<template class="schema-editor-input schema-editor-notification-column">
   <label>
     ${schema["title"] & toolT}
     <span show.bind="required">
