--- a/client/src/elements/schema-editor/schema-editor-json.html
+++ b/client/src/elements/schema-editor/schema-editor-json.html
@@ -1,4 +1,4 @@
-<template>
+<template class="schema-editor-notification-column">
   <label>
     ${schema["title"] & toolT}
     <span show.bind="required">
