--- a/client/src/elements/schema-editor/schema-editor-link.html
+++ b/client/src/elements/schema-editor/schema-editor-link.html
@@ -1,4 +1,4 @@
-<template>
+<template class="schema-editor-notification-column">
   <label>
     ${schema.properties.url["title"] || '' & toolT}
     <span show.bind="required">
