--- a/client/src/elements/schema-editor/schema-editor-table.html
+++ b/client/src/elements/schema-editor/schema-editor-table.html
@@ -1,4 +1,4 @@
-<template>
+<template class="schema-editor-notification-column">
   <require from="./schema-editor-table.css"></require>
   <require from="elements/schema-editor/schema-editor"></require>
   <label>
