--- a/client/src/elements/schema-editor/schema-editor-boolean.html
+++ b/client/src/elements/schema-editor/schema-editor-boolean.html
@@ -1,4 +1,4 @@
-<template class="schema-editor-input schema-editor-notification-column">
+<template class="schema-editor-input ${showNotifications ? 'schema-editor-notification-column' : ''}">
   <div class="q-form__checkbox">
     <label>
       <input type="checkbox" checked.bind="data" change.delegate="change()">
