--- a/client/src/elements/schema-editor/schema-editor-geojson-point.html
+++ b/client/src/elements/schema-editor/schema-editor-geojson-point.html
@@ -9,7 +9,7 @@
       data.two-way="data.properties"
       change.bind="change"></schema-editor-object>
 
-    <div class="lat-lng-input schema-editor-notification-column">
+    <div class="lat-lng-input ${showNotifications ? 'schema-editor-notification-column' : ''}">
       <label>
         Latitude
         <input type="number" step="any" value.bind="data.geometry.coordinates[1] | forceNumber" input.delegate="updateMarker(true)" required.bind="isRequired(schema.properties.geometry, 'coordinates')">
