Pass down showNotification property in geojson-point

--- a/client/src/elements/schema-editor/schema-editor-geojson-point.html
+++ b/client/src/elements/schema-editor/schema-editor-geojson-point.html
@@ -7,7 +7,8 @@
     <schema-editor-object
       schema.bind="schema.properties.properties"
       data.two-way="data.properties"
-      change.bind="change"></schema-editor-object>
+      change.bind="change"
+      show-notifications.bind="showNotifications"></schema-editor-object>
 
     <div class="lat-lng-input ${showNotifications ? 'schema-editor-notification-column' : ''}">
       <label>
