--- a/client/src/elements/schema-editor/schema-editor-number.html
+++ b/client/src/elements/schema-editor/schema-editor-number.html
@@ -7,5 +7,5 @@
     </span>
     <input type="number" placeholder.to-view="options.placeholder || '' & toolT" required.bind="required" value.bind="data | forceNumber"
       step.bind="options.step" min.bind="schema.minimum" max.bind="schema.maximum" keyup.delegate="change() & debounce:800">
-    <label>
+  </label>
 </template>
