--- a/client/src/elements/schema-editor/schema-editor-url.html
+++ b/client/src/elements/schema-editor/schema-editor-url.html
@@ -1,4 +1,4 @@
-<template class="${showNotifications ? 'schema-editor-notification-column' : ''}">
+<template class="schema-editor-input ${showNotifications ? 'schema-editor-notification-column' : ''}">
   <label>
     ${schema["title"] & toolT}
     <span show.bind="required">
@@ -6,5 +6,5 @@
       <span style="color: var(--q-color-error)">${'editor.required' & t}</span>
     </span>
     <input type="url" placeholder.to-view="options.placeholder || '' & toolT" required.bind="required" value.bind="data" keyup.delegate="change() & debounce:800">
-    <label>
+  </label>
 </template>
