Rename isValueMissing notification to required notification

--- a/client/src/elements/schema-editor/schema-editor-base64image.html
+++ b/client/src/elements/schema-editor/schema-editor-base64image.html
@@ -1,4 +1,4 @@
-<template class="${showNotifications ? 'schema-editor-notification-column' : ''}">
+<template class="schema-editor-input ${showNotifications ? 'schema-editor-notification-column' : ''}">
   <require from="./schema-editor-base64image.css"></require>
   <label>
     <span>${schema["title"] & toolT}</span>
