Show placeholders in json component

--- a/client/src/elements/schema-editor/schema-editor-json.html
+++ b/client/src/elements/schema-editor/schema-editor-json.html
@@ -5,6 +5,6 @@
       <span>- </span>
       <span style="color: var(--q-color-error)">${'editor.required' & t}</span>
     </span>
-    <textarea ref="inputElement" value.bind="data | json" required.bind="required" change.delegate="validate()" input.delegate="handleChange() & debounce:800"></textarea>
+    <textarea ref="inputElement" placeholder.to-view="options.placeholder || '' & toolT" value.bind="data | json" required.bind="required" change.delegate="validate()" input.delegate="handleChange() & debounce:800"></textarea>
   </label>
 </template>
